[ADD] static endpoints
